2004-02-02  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin, src/kahua-spvr : fixed "help" command. now it shows all the commands on both scripts.

2004-01-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/developer.scm, src/user.conf.sample : added the developer account.
	* src/kahua/test/developer.scm : added.
	
	* src/kahua-shell.in : added the REPL interface for kahua developers.

	* src/kahua.conf.sample (userconf-file), src/kahua/config.scm :
	added userconf-file slot

2004-01-25  Shiro Kawai  <shiro@acm.org>

	* src/kahua/session.scm :
	(<session-cont>): added permanent? slot
	(session-cont-register): set permanent? #t for permanent entries
	(session-cont-sweep): avoid sweeping permanent entries.

2004-01-24  Shiro Kawai  <shiro@acm.org>

	* src/kahua/user.scm (kahua-user-password-change): added.

2004-01-23  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.in (main): fixed a bug that kahua-spvr removes
	the socket on exit when it detects another kahua-spvr is running.

	* src/kahua/server.scm (a/cont): allow 'fragment' parameter to aux
	list, to specify fragment id of generated uri.

2004-01-22  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (kahua-default-handler): process error-proc's
	result by render-proc, so that error-proc can return [SXML].

	* src/kahua-server.in (kahua-error-proc): new parameter to customize
	error-handling routine.
	
	* src/kahua/persistence.scm (initialize): fixed a problem when
	class definition is changed to remove an existing slot.

	* src/kahua/server.scm (form/cont): allow to pass extra parameters
	to the continuation closure, much like a/cont.

	* src/kahua/util.scm: added.
	* src/kahua.scm: added kahua.util

2004-01-20  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in (compose-reply): pass through the extra
	headers given in the reply.
	(get-path-info): fixed a problem when PATH_INFO is "/".
	(server-uri): pass the server's absolute uri to the application
	server via "x-kahua-server-uri" header.
	